--- a/데이터전처리/데이터 전처리(1).ipynb
+++ b/데이터전처리/데이터 전처리(1).ipynb
@@ -27,8 +27,8 @@
     "print(csData.to_markdown)\n",
     "csData.dtypes\n",
     "\n",
-    "#\n",
-    "#\n",
+    "# 함수를 활용한 조작 (복잡한 로직에도 적용이 )\n",
+    "# np.where를 활용한 조작 (복잡한 로직에 적용하기 어려움)\n",
     "# loc 함수를 활용한 조작 (높은 가독성, 낮은 속도)\n",
     "# map 함수를 활용한 조작 (머신/딥러닝에서 많이 사용)"
    ]
