--- a/데이터전처리/전처리_프로젝트.ipynb
+++ b/데이터전처리/전처리_프로젝트.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "selloutData[\"WEEK\"] = yearweekStr.YEARWEEK.str[4:6]\n",
     "\n",
     "# 추출 목표 설정\n",
-    "targetweeks = \"52\"\n",
+    "targetweeks = \"53\"\n",
     "\n",
     "# 필요내용 포함한 변수 지정\n",
     "refinedSelloutData = selloutData.loc[selloutData.WEEK <= targetweeks]\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,178 @@
        "Name: YEAR, dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "groupData.YEAR.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REGIONID</th>\n",
+       "      <th>PRODUCT</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>QTY_MEAN</th>\n",
+       "      <th>MA5</th>\n",
+       "      <th>EFFECT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A00</td>\n",
+       "      <td>PRODUCT34</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>275.961538</td>\n",
+       "      <td>132.745525</td>\n",
+       "      <td>2.078876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A00</td>\n",
+       "      <td>PRODUCT34</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>85.698113</td>\n",
+       "      <td>100.227413</td>\n",
+       "      <td>0.855037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A00</td>\n",
+       "      <td>PRODUCT34</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>36.576923</td>\n",
+       "      <td>81.691364</td>\n",
+       "      <td>0.447745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A00</td>\n",
+       "      <td>PRODUCT58</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2.673077</td>\n",
+       "      <td>87.972134</td>\n",
+       "      <td>0.030385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A00</td>\n",
+       "      <td>PRODUCT58</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>7.547170</td>\n",
+       "      <td>5554.570972</td>\n",
+       "      <td>0.001359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2377</th>\n",
+       "      <td>A77</td>\n",
+       "      <td>PRODUCT1</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3031.547170</td>\n",
+       "      <td>22697.924819</td>\n",
+       "      <td>0.133561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2378</th>\n",
+       "      <td>A77</td>\n",
+       "      <td>PRODUCT1</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>3375.326923</td>\n",
+       "      <td>2850.191582</td>\n",
+       "      <td>1.184246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2379</th>\n",
+       "      <td>A77</td>\n",
+       "      <td>PRODUCT12</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2035.788462</td>\n",
+       "      <td>3365.091582</td>\n",
+       "      <td>0.604973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2380</th>\n",
+       "      <td>A77</td>\n",
+       "      <td>PRODUCT12</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3545.641509</td>\n",
+       "      <td>3448.477685</td>\n",
+       "      <td>1.028176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2381</th>\n",
+       "      <td>A77</td>\n",
+       "      <td>PRODUCT12</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>4837.153846</td>\n",
+       "      <td>3472.861272</td>\n",
+       "      <td>1.392844</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2382 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     REGIONID    PRODUCT  YEAR     QTY_MEAN           MA5    EFFECT\n",
+       "0         A00  PRODUCT34  2014   275.961538    132.745525  2.078876\n",
+       "1         A00  PRODUCT34  2015    85.698113    100.227413  0.855037\n",
+       "2         A00  PRODUCT34  2016    36.576923     81.691364  0.447745\n",
+       "3         A00  PRODUCT58  2014     2.673077     87.972134  0.030385\n",
+       "4         A00  PRODUCT58  2015     7.547170   5554.570972  0.001359\n",
+       "...       ...        ...   ...          ...           ...       ...\n",
+       "2377      A77   PRODUCT1  2015  3031.547170  22697.924819  0.133561\n",
+       "2378      A77   PRODUCT1  2016  3375.326923   2850.191582  1.184246\n",
+       "2379      A77  PRODUCT12  2014  2035.788462   3365.091582  0.604973\n",
+       "2380      A77  PRODUCT12  2015  3545.641509   3448.477685  1.028176\n",
+       "2381      A77  PRODUCT12  2016  4837.153846   3472.861272  1.392844\n",
+       "\n",
+       "[2382 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "groupData"
    ]
   }
  ],
