--- a/financePrj/financePrj_demo.ipynb
+++ b/financePrj/financePrj_demo.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 참고링크\n",
+    "\n",
+    "# financedatareader 사용법\n",
+    "# https://financedata.github.io/posts/finance-data-reader-users-guide.html\n",
+    "\n",
+    "# 각종지표 출력\n",
+    "# https://m.blog.naver.com/stochastic73/222126545678"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "import pandas as pd\n",
+    "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -177,13 +193,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 목표 시장 내 상위 200종목 선정\n",
     "symbolList = targetMarket.loc[:199, \"Symbol\"]\n",
     "nameList = targetMarket.loc[:199, \"Name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = pd.DataFrame(data = list(zip(symbolList, nameList)), columns = ['stockCode', 'corpName'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stockCode</th>\n",
+       "      <th>corpName</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>Apple Inc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>Microsoft Corp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AMZN</td>\n",
+       "      <td>Amazon.com Inc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FB</td>\n",
+       "      <td>Facebook Inc Class A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>Alphabet Inc Class A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>MPWR</td>\n",
+       "      <td>Monolithic Power Systems Inc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>American Airlines Group Inc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>PTC</td>\n",
+       "      <td>PTC Inc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>LKQ</td>\n",
+       "      <td>LKQ Corp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>ENTG</td>\n",
+       "      <td>Entegris Inc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>200 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    stockCode                      corpName\n",
+       "0        AAPL                     Apple Inc\n",
+       "1        MSFT                Microsoft Corp\n",
+       "2        AMZN                Amazon.com Inc\n",
+       "3          FB          Facebook Inc Class A\n",
+       "4       GOOGL          Alphabet Inc Class A\n",
+       "..        ...                           ...\n",
+       "195      MPWR  Monolithic Power Systems Inc\n",
+       "196       AAL   American Airlines Group Inc\n",
+       "197       PTC                       PTC Inc\n",
+       "198       LKQ                      LKQ Corp\n",
+       "199      ENTG                  Entegris Inc\n",
+       "\n",
+       "[200 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1"
    ]
   },
   {
@@ -486,6 +628,144 @@
    ],
    "source": [
     "SEC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 필요한 각 수치 지정 필요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 가동일 기준 데이터를 로드, 리스트를 생성해줄 클래스 생성\n",
+    "# 기준이 될 시작일자, 시장목록을 입력받는다.\n",
+    "\n",
+    "# 시장목록 : KRX(한국전체), KOSPI(코스피전체), KOSDAQ(코스닥전체), KONEX(코넥스전체),\n",
+    "# / NASDAQ(나스닥종목), NYSE(뉴욕증권거래소), AMEX(AMEX종목), SP500(S&P500 종목)\n",
+    "\n",
+    "def createData(dayago, market):\n",
+    "    today = date.today()\n",
+    "    startday = date.today() - timedelta(dayago)\n",
+    "    yesterday = date.today() - timedelta(1)\n",
+    "    \n",
+    "    # 목표 시장 선택 및 데이터 로드\n",
+    "    print(\"loading entire stockcode data from market..\")\n",
+    "    try:\n",
+    "        targetMarket = web.StockListing(market)\n",
+    "        print(\"loading complete. making lists..\")\n",
+    "        \n",
+    "        # 목표 시장 내 상위 100종목 선정\n",
+    "        symbolList = targetMarket.loc[:99, \"Symbol\"]\n",
+    "        nameList = targetMarket.loc[:99, \"Name\"]\n",
+    "        \n",
+    "        marketList = pd.DataFrame(data = list(zip(symbolList, nameList)), columns = ['stockCode', 'corpName'])\n",
+    "        marketList.to_csv('marketList_' + str(today) + '.csv')\n",
+    "        print(\"list created, initialize next steps.\")\n",
+    "        \n",
+    "    except:\n",
+    "        time.sleep(3)\n",
+    "        print(\"loading error occured, please try again or check ur status.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 종가기준 도표를 작성 밎 저장할 클래스 생성"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 리퀘스트 처리할 클래스 생성\n",
+    "\n",
+    "class reqHandler(BaseHTTPRequestHandler):\n",
+    "    \n",
+    "    def menuSelect(self):\n",
+    "        # 결과창 : \"종목명\"(종목코드), 매수/매도추천여부(점수) 출력\n",
+    "        # ex) http://localhost:8666/finance/showRes?how=(buy/sell)&duration=(long/short)&recommand=(on/off)&stockcode=(AAPL_TSLA)\n",
+    "        # 추천은 변동폭 기준 전망이 좋은 상위 10개 종목 내용 추가함. 타 조건과 겹칠 수 있다.\n",
+    "        # 매수 / 매도 옵션에 따라 적용되는 식을 다르게 한다. 검색하는 코드들만 내용 출력할 것.\n",
+    "        data = []\n",
+    "        if None != re.search('/finance/*', self.path):\n",
+    "            if None != re.search('finance/showRes', self.path):\n",
+    "                queryString = urlparse.split('&')\n",
+    "                modSet = queryString[0].split('=')[1]\n",
+    "                rangeSet = queryString[1].split('=')[1]\n",
+    "                recommandSet = queryString[2].split('=')[1]\n",
+    "                targetStock = queryString[3].split('=')[1]\n",
+    "#                 switchs = [modSet, rangeSet, searchSet]\n",
+    "\n",
+    "        else:\n",
+    "            self.send_response(404)\n",
+    "            self.send_header('Content-type', 'application/json')\n",
+    "            self.end_headers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# url값 확인\n",
+    "\n",
+    "urlparse = \"http://localhost:8666/finance/showRes?how=(buy/sell)&duration=(long/short)&recommand=(on/off)&stockcode=(AAPL_TSLA)\"\n",
+    "queryString = urlparse.split('&')\n",
+    "modSet = queryString[0].split('=')[1]\n",
+    "rangeSet = queryString[1].split('=')[1]\n",
+    "recommandSet = queryString[2].split('=')[1]\n",
+    "targetStock = queryString[3].split('=')[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['http://localhost:8666/finance/showRes?how=(buy/sell)',\n",
+       " 'duration=(long/short)',\n",
+       " 'recommand=(on/off)',\n",
+       " 'stockcode=(AAPL_TSLA)']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queryString"
    ]
   }
  ],
