--- a/financePrj/financePrj_demo.ipynb
+++ b/financePrj/financePrj_demo.ipynb
@@ -658,28 +658,34 @@
     "# 시장목록 : KRX(한국전체), KOSPI(코스피전체), KOSDAQ(코스닥전체), KONEX(코넥스전체),\n",
     "# / NASDAQ(나스닥종목), NYSE(뉴욕증권거래소), AMEX(AMEX종목), SP500(S&P500 종목)\n",
     "\n",
+    "# market = url 통해 input값 받아옴\n",
+    "# dayage = 위와 동일\n",
+    "\n",
+    "\n",
     "def createData(dayago, market):\n",
     "    today = date.today()\n",
     "    startday = date.today() - timedelta(dayago)\n",
     "    yesterday = date.today() - timedelta(1)\n",
     "    \n",
+    "    codefilename = 'marketList_' + str(market) + '.csv'\n",
+    "    \n",
     "    # 목표 시장 선택 및 데이터 로드\n",
     "    print(\"loading entire stockcode data from market..\")\n",
     "    try:\n",
-    "        targetMarket = web.StockListing(market)\n",
-    "        print(\"loading complete. making lists..\")\n",
-    "        \n",
-    "        # 목표 시장 내 상위 100종목 선정\n",
-    "        symbolList = targetMarket.loc[:99, \"Symbol\"]\n",
-    "        nameList = targetMarket.loc[:99, \"Name\"]\n",
-    "        \n",
-    "        marketList = pd.DataFrame(data = list(zip(symbolList, nameList)), columns = ['stockCode', 'corpName'])\n",
-    "        marketList.to_csv('marketList_' + str(today) + '.csv')\n",
-    "        print(\"list created, initialize next steps.\")\n",
-    "        \n",
+    "        with open(codefilename, 'r', newline='') as file: # file을 여는게 아니라 있는지 확인하는 기능으로 치환\n",
+    "            print(\"list already exists, proceed to next steps.\")\n",
     "    except:\n",
-    "        time.sleep(3)\n",
-    "        print(\"loading error occured, please try again or check ur status.\")"
+    "        try:\n",
+    "            print(\"list none-exists. load marketList which you requested.\")\n",
+    "            targetMarket = web.StockListing(market)\n",
+    "            print(\"loading complete. making lists..\")\n",
+    "\n",
+    "            marketList.to_csv('marketList_' + str(market) + '.csv')\n",
+    "            print(\"list created, initialize to next steps.\")\n",
+    "\n",
+    "        except:\n",
+    "            time.sleep(3)\n",
+    "            print(\"loading error occured, please try again or check ur status.\")"
    ]
   },
   {
@@ -700,15 +706,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 리퀘스트 처리할 클래스 생성\n",
+    "# 파라미터를 받아줄 기능 (post) - isvalidchain 참조\n",
+    "\n",
+    "def setParams():\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 리퀘스트 처리할 클래스 생성 - post\n",
+    "\n",
+    "def do_POST(self):\n",
+    "    \n",
+    "    if None != re.search('/block/*', self.path):\n",
+    "        self.send_response(200)\n",
+    "        self.send_header('Content-type', 'application/json')\n",
+    "        self.end_headers()\n",
+    "        \n",
+    "        if None != re.search('/finance/basicset/*', self.path):\n",
+    "            ctype, pdict = cgi.parse_header(self.headers['content-type'])\n",
+    "\n",
+    "            if ctype == 'application/json':\n",
+    "                content_length = int(self.headers['Content-Length'])\n",
+    "                post_data = self.rfile.read(content_length)\n",
+    "                receivedData = post_data.decode('utf-8')\n",
+    "                print(type(receivedData))\n",
+    "                tempDict = json.loads(receivedData)\n",
+    "\n",
+    "                if setParams(tempDict) == True:\n",
+    "                    tempDict.append(\"request adjusted.\")\n",
+    "                    self.wfile.write(bytes(json.dumps(tempDict), \"utf-8\"))\n",
+    "                else:\n",
+    "                    tempDict.append(\"request failed, check ur status again.\")\n",
+    "                    self.wfile.write(bytes(json.dumps(tempDict), \"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BaseHTTPRequestHandler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-791adf84ab86>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 리퀘스트 처리할 클래스 생성 - get\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mreqHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mBaseHTTPRequestHandler\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdo_GET\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'BaseHTTPRequestHandler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 리퀘스트 처리할 클래스 생성 - get\n",
     "\n",
     "class reqHandler(BaseHTTPRequestHandler):\n",
     "    \n",
-    "    def menuSelect(self):\n",
+    "    def do_GET(self):\n",
+    "        print(\"request accepted, constructing result datas..\")\n",
     "        # 결과창 : \"종목명\"(종목코드), 매수/매도추천여부(점수) 출력\n",
     "        # ex) http://localhost:8666/finance/showRes?how=(buy/sell)&duration=(long/short)&recommand=(on/off)&stockcode=(AAPL_TSLA)\n",
     "        # 추천은 변동폭 기준 전망이 좋은 상위 10개 종목 내용 추가함. 타 조건과 겹칠 수 있다.\n",
@@ -716,12 +785,35 @@
     "        data = []\n",
     "        if None != re.search('/finance/*', self.path):\n",
     "            if None != re.search('finance/showRes', self.path):\n",
+    "                \n",
     "                queryString = urlparse.split('&')\n",
     "                modSet = queryString[0].split('=')[1]\n",
     "                rangeSet = queryString[1].split('=')[1]\n",
     "                recommandSet = queryString[2].split('=')[1]\n",
     "                targetStock = queryString[3].split('=')[1]\n",
     "#                 switchs = [modSet, rangeSet, searchSet]\n",
+    "\n",
+    "                try:\n",
+    "                    self.send_response(200)\n",
+    "                    self.send_header('Content-type', 'application/json')\n",
+    "                    self.end_headers()\n",
+    "                    \n",
+    "                    if finishedData == None:\n",
+    "                        print(\"no data exists.\")\n",
+    "                        data.append(\"no data exists.\")\n",
+    "                    else:\n",
+    "                        for i in range (0, finishedData):\n",
+    "                            print(finishedData[i].__dict__)\n",
+    "                            data.append(finishedData[i].__dict__)\n",
+    "                    \n",
+    "                except:\n",
+    "                    self.send_response(500)\n",
+    "                    self.send_header('Content-type', 'application/json')\n",
+    "                    self.end_headers()\n",
+    "                    data.append(\"Errors occured : values out of condition, check your request again.\")\n",
+    "                \n",
+    "                finally:\n",
+    "                    self.wfile.write(bytes(json.dumps(data, sort_keys=True, indent=4), \"utf-8\"))\n",
     "\n",
     "        else:\n",
     "            self.send_response(404)\n",
