--- a/financePrj/financePrj_demo.ipynb
+++ b/financePrj/financePrj_demo.ipynb
@@ -29,6 +29,8 @@
     "import datetime\n",
     "import pandas as pd\n",
     "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
+    "from soketserver import ThreadingMixIn\n",
+    "import threading\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -636,7 +638,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 필요한 각 수치 지정 필요"
+    "# 필요한 라이브러리\n",
+    "\n",
+    "import FinanceDataReader as web\n",
+    "from datetime import date, timedelta\n",
+    "import matplotlib.pyplot as plt\n",
+    "import datetime\n",
+    "import pandas as pd\n",
+    "from http.server import BaseHTTPRequestHandler, HTTPServer\n",
+    "from soketserver import ThreadingMixIn\n",
+    "import threading\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -644,7 +657,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 필요한 각 수치 지정 필요\n",
+    "\n",
+    "PORT_NUMBER = 8081"
+   ]
   },
   {
    "cell_type": "code",
@@ -659,7 +676,7 @@
     "# / NASDAQ(나스닥종목), NYSE(뉴욕증권거래소), AMEX(AMEX종목), SP500(S&P500 종목)\n",
     "\n",
     "# market = url 통해 input값 받아옴\n",
-    "# dayage = 위와 동일\n",
+    "# dayago = 위와 동일\n",
     "\n",
     "\n",
     "def createData(dayago, market):\n",
@@ -693,7 +710,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 목표 시장 및 startday를 받아줄 클래스 생성"
+   ]
   },
   {
    "cell_type": "code",
@@ -798,13 +817,13 @@
     "                    self.send_header('Content-type', 'application/json')\n",
     "                    self.end_headers()\n",
     "                    \n",
-    "                    if finishedData == None:\n",
+    "                    if resultData == None:\n",
     "                        print(\"no data exists.\")\n",
     "                        data.append(\"no data exists.\")\n",
     "                    else:\n",
-    "                        for i in range (0, finishedData):\n",
-    "                            print(finishedData[i].__dict__)\n",
-    "                            data.append(finishedData[i].__dict__)\n",
+    "                        for i in range (0, resultData):\n",
+    "                            print(resultData[i].__dict__)\n",
+    "                            data.append(resultData[i].__dict__)\n",
     "                    \n",
     "                except:\n",
     "                    self.send_response(500)\n",
@@ -814,11 +833,62 @@
     "                \n",
     "                finally:\n",
     "                    self.wfile.write(bytes(json.dumps(data, sort_keys=True, indent=4), \"utf-8\"))\n",
+    "                \n",
+    "            elif None != re.search('/finance/generateList', self.path):\n",
+    "                self.send_response(200)\n",
+    "                self.send_header('Content-type', 'application/json')\n",
+    "                self.end_headers()\n",
+    "                t = threading.Thread(target=createData)\n",
+    "                t.start()\n",
+    "                data.append(\"{listing is underway:check ur server console and initalize settings.}\")\n",
+    "                self.wfile.write(bytes(json.dumps(data, sort_keys=True, indent=4), \"utf-8\"))\n",
     "\n",
-    "        else:\n",
-    "            self.send_response(404)\n",
-    "            self.send_header('Content-type', 'application/json')\n",
-    "            self.end_headers()"
+    "            else:\n",
+    "                self.send_response(404)\n",
+    "                self.send_header('Content-type', 'application/json')\n",
+    "                self.end_headers()\n",
+    "                data.append(\"{info:no such api}\")\n",
+    "                self.wfile.write(bytes(json.dumps(data, sort_keys=True, indent=4), \"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ThreadingMixIn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-0934d743e522>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# request handler 생성\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mThreadedHTTPServer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mThreadingMixIn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mHTTPServer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ThreadingMixIn' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# request handler 생성\n",
+    "\n",
+    "class ThreadedHTTPServer(ThreadingMixIn, HTTPServer):\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        # Create a web server and define the handler to manage the\n",
+    "        # incoming request\n",
+    "        # server = HTTPServer(('', PORT_NUMBER), myHandler)\n",
+    "        server = ThreadedHTTPServer(('', PORT_NUMBER), myHandler)\n",
+    "        print('Started httpserver on port ', PORT_NUMBER)\n",
+    "\n",
+    "        initSvr()\n",
+    "        # Wait forever for incoming http requests\n",
+    "        server.serve_forever()\n",
+    "\n",
+    "    except (KeyboardInterrupt, Exception) as e:\n",
+    "        print('^C received, shutting down the web server')\n",
+    "        print(e)\n",
+    "        server.socket.close()"
    ]
   },
   {
