--- a/financePrj/financePrj_demo.ipynb
+++ b/financePrj/financePrj_demo.ipynb
@@ -19,6 +19,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\SMART-10\\\\Desktop\\\\gittest\\\\python\\\\financePrj'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 라이브러리 선언\n",
