--- a/financePrj/finance_김재현.ipynb
+++ b/financePrj/finance_김재현.ipynb
@@ -8,16 +8,13 @@
     "##### Created : 2021-06-23\n",
     "##### Description : 기능에 따라 해당 코드의 관련 정보를 확인 및 시각화. MACD, OSC 값을 기준으로 판단한다.\n",
     "##### \n",
-    "##### \n",
     "##### 1. 기능\n",
     "##### seeAll = 4개월간 이동평균선이 상승국면에 있으나 1달간 단기 하락중인 종목 코드 리스트업\n",
     "##### select = 배당을 비롯한 세부정보 및 차트 제공 \n",
     "##### \n",
-    "##### \n",
     "##### 2. 제한사항\n",
-    "##### 배당정보 로딩 간 몇몇 종목 로딩 실패 (AMC, GME, ...)\n",
+    "##### 배당정보 로딩 간 배당 미지급 종목 예외처리 진행중 (AMC, GME, ...)\n",
     "##### 미국 주식의 경우에만 select 이용 가능\n",
-    "##### \n",
     "##### \n",
     "##### 3. 참고링크\n",
     "##### https://md2biz.tistory.com/397 각종 지표별 의미\n",
