--- a/financePrj/finance_김재현.ipynb
+++ b/financePrj/finance_김재현.ipynb
@@ -10,7 +10,7 @@
     "##### \n",
     "##### 1. 기능\n",
     "##### seeAll = 4개월간 이동평균선이 상승국면에 있으나 1달간 단기 하락중인 종목 코드 리스트업\n",
-    "##### select = 배당을 비롯한 세부정보 및 차트 제공 \n",
+    "##### search = 배당을 비롯한 세부정보 및 차트 제공 \n",
     "##### \n",
     "##### 2. 제한사항\n",
     "##### 배당정보 로딩 간 배당 미지급 종목 예외처리 진행중 (AMC, GME, ...)\n",
